<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:background="@color/pink_red"
    android:orientation="vertical"
    tools:context=".LoginEmailActivity">



    <ImageView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_login"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:background="@color/white_snow"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txt_Email"
            android:textColor="@color/dark_sea"
            android:hint="@string/txt_Email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:background="@color/white_snow"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/txt_pasword"
            android:hint="@string/txt_Password"
            android:textColor="@color/dark_sea"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ingresar"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/white_snow"
        app:cornerRadius="10dp"
        android:text="@string/btn_Ingresar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/sincuenta"
        android:text="@string/txt_sin_cuenta"
        android:textColor="@color/dark_sea"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/registrarse"
        android:text="@string/txt_registrarse"
        android:textColor="@color/dark_sea"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.appcompat.widget.LinearLayoutCompat>